--- a/01 - enchanted-forest/styles.css
+++ b/01 - enchanted-forest/styles.css
@@ -3,18 +3,36 @@
 html {
     background: url(photos/resized.sebastian.jpg);
     background-size: cover;
+    color: white;
 }
-    /*
-        # set background to photo with url(link.com) bottom center
-        # Photo by Sebastian Unrau on Unsplash
-        # Photo by veeterzy on Unsplash
-        # set background-size to cover
-    
-    # body, html
-        # margin, padding, font family
-    
-    # main div class selector
-        # use flexbox notes
+ 
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.forest {
+    display: flex;
+    position: absolute;
+    margin: 0px;
+    flex-direction: row;
+    width: 100%;
+    height:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+}
+
+.tree{
+    border: thin solid white;
+    padding: 10px;
+}
+/*
     
     # little divs class selector
         # set border, margin, font size, padding
